[build-system]
requires = ["setuptools>=60", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-memori"
version = "0.1.1"
description = "Official Memori Labs long-term memory provider for Hermes Agent"
authors = [{name = "Memori Labs Team", email = "noc@memorilabs.ai"}]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["hermes-agent", "memory", "memori", "ai-agents", "long-term-memory"]
dependencies = ["memori>=3.3.3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.entry-points."hermes_agent.plugins"]
memori = "memori_hermes:register"

[project.urls]
Homepage = "https://memorilabs.ai"
Documentation = "https://memorilabs.ai/docs/"
Repository = "https://github.com/MemoriLabs/Memori"
"Bug Tracker" = "https://github.com/MemoriLabs/Memori/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
memori_hermes = ["plugin.yaml"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
